--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
   <a class="navbar-brand js-scroll-trigger" href="#page-top">
     <span class="d-block d-lg-none">Makyar Hakeem Muhammad Rizwan</span>
     <span class="d-none d-lg-block">
-      <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="Profile Picture">
+      <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="profile.jpg" alt="Profile Picture" />
     </span>
   </a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive">
