--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
   <img src="profile.jpg" alt="Profile Picture">
   <h2>Makyar Hakeem</h2>
   <h3>Muhammad Rizwan</h3>
-  <div class="text-center mb-3">Dubai, UAE<br><a href="mailto:mhrizwanmuhammad16@gmail.com">mhrizwanmuhammad16@gmail.com</a></div>
-  <nav class="nav flex-column w-100">
+  <nav class="nav flex-column w-100 mt-4">
     <a class="nav-link" href="#about">About Me</a>
     <a class="nav-link" href="#experience">Professional Summary</a>
     <a class="nav-link" href="#education-certifications">Education & Certifications</a>
@@ -50,15 +49,21 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
   </nav>
 </div>
 
-<!-- Main Content -->
-<div class="content">
-  <!-- About Me Section -->
-  <section class="resume-section" id="about">
-    <h2>About Me</h2>
-    <p>
-      Electronics and Communication Engineer specializing in Embedded Systems, IoT, Robotics, and Automation. Experienced in firmware development, wireless communication protocols, PCB design, system integration, and testing using STM32, ESP32, and Raspberry Pi. Passionate about developing advanced embedded systems for smart cities, defense, transportation, and intelligent automation.
-    </p>
-  </section>
+<!-- About Me Section -->
+<section class="resume-section" id="about">
+  <h2>About Me</h2>
+  <p>
+    Electronics and Communication Engineer specializing in Embedded Systems, IoT, Robotics, and Automation. Experienced in firmware development, wireless communication protocols, PCB design, system integration, and testing using STM32, ESP32, and Raspberry Pi. Passionate about developing advanced embedded systems for smart cities, defense, transportation, and intelligent automation.
+  </p>
+  <div class="mt-4">
+    <p><strong>Contact:</strong> Dubai, UAE · +971-505565926 · <a href="mailto:mhrizwanmuhammad16@gmail.com">Email Me</a></p>
+    <div class="d-flex gap-3">
+      <a href="YOUR_LINKEDIN_URL" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+      <a href="YOUR_INSTAGRAM_URL" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+    </div>
+  </div>
+</section>
+
   <hr>
 
   <!-- Professional Experience -->
