--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
     <a class="nav-link" href="#projects">Projects</a>
   </nav>
 </div>
-
+    
+<!-- Main Content -->
+<div class="content">
 <!-- About Me Section -->
 <section class="resume-section" id="about">
   <h2>About Me</h2>
