--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
 <!-- Sidebar -->
 <div class="sidebar d-flex flex-column align-items-center">
   <img src="profile.jpg" alt="Profile Picture">
-  <h2>Makyar Hakeem</h2>
-  <h3>Muhammad Rizwan</h3>
+  <h3>Makyar Hakeem</h3>
+  <h1>Muhammad Rizwan</h1>
   <nav class="nav flex-column w-100 mt-4">
     <a class="nav-link" href="#about">About Me</a>
     <a class="nav-link" href="#experience">Professional Summary</a>
@@ -51,6 +51,7 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
     
 <!-- Main Content -->
 <div class="content">
+    
 <!-- About Me Section -->
 <section class="resume-section" id="about">
   <h2>About Me</h2>
@@ -58,10 +59,30 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
     Electronics and Communication Engineer specializing in Embedded Systems, IoT, Robotics, and Automation. Experienced in firmware development, wireless communication protocols, PCB design, system integration, and testing using STM32, ESP32, and Raspberry Pi. Passionate about developing advanced embedded systems for smart cities, defense, transportation, and intelligent automation.
   </p>
   <div class="mt-4">
-    <p><strong>Contact:</strong> Dubai, UAE · +971-505565926 · <a href="mailto:mhrizwanmuhammad16@gmail.com">Email Me</a></p>
-    <div class="d-flex gap-3">
-      <a href="YOUR_LINKEDIN_URL" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-      <a href="YOUR_INSTAGRAM_URL" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+    <div class="d-flex flex-column gap-2">
+      <!-- Location -->
+      <a href="YOUR_GOOGLE_MAPS_LINK" target="_blank" class="text-decoration-none">
+        <i class="fas fa-map-marker-alt me-2"></i>Dubai, UAE
+      </a>
+
+      <!-- Phone Numbers -->
+      <a href="tel:+971505565926" class="text-decoration-none">
+        <i class="fas fa-phone me-2"></i>+971-505565926
+      </a>
+      <a href="tel:+919449217321" class="text-decoration-none">
+        <i class="fas fa-phone me-2"></i>+919449217321
+      </a>
+
+      <!-- Email -->
+      <a href="mailto:mhrizwanmuhammad16@gmail.com" class="text-decoration-none">
+        <i class="fas fa-envelope me-2"></i>mhrizwanmuhammad16@gmail.com
+      </a>
+
+      <!-- Social Links -->
+      <div class="d-flex gap-3 mt-2">
+        <a href="https://www.linkedin.com/in/m-h-rizwan-2910d2002" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+        <a href="https://www.instagram.com/m.h_rizwan/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+      </div>
     </div>
   </div>
 </section>
