--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
 <div class="sidebar d-flex flex-column align-items-center">
   <img src="profile.jpg" alt="Profile Picture">
   <h3>Makyar Hakeem</h3>
-  <h1>Muhammad Rizwan</h1>
+  <h2>Muhammad Rizwan</h2>
   <nav class="nav flex-column w-100 mt-4">
     <a class="nav-link" href="#about">About Me</a>
     <a class="nav-link" href="#experience">Professional Summary</a>
@@ -168,7 +168,7 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
   <!-- Projects -->
   <section class="resume-section" id="projects">
     <h2>Projects</h2>
-    <p>All project cards and modals remain the same as your previous code (replace placeholders with your actual images).</p>
+    <p>COMING SOOON .....!.</p>
   </section>
 </div>
 
