--- a/index.html
+++ b/index.html
@@ -62,41 +62,47 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
     
 <!-- Main Content -->
 <div class="content">
-    
-<!-- About Me Section -->
+    <!-- About Me Section -->
 <section class="resume-section" id="about">
   <h2>About Me</h2>
   <p>
     Electronics and Communication Engineer specializing in Embedded Systems, IoT, Robotics, and Automation. Experienced in firmware development, wireless communication protocols, PCB design, system integration, and testing using STM32, ESP32, and Raspberry Pi. Passionate about developing advanced embedded systems for smart cities, defense, transportation, and intelligent automation.
   </p>
+
   <div class="mt-4">
-    <div class="d-flex flex-column gap-2">
-      <!-- Location -->
-      <a href="YOUR_GOOGLE_MAPS_LINK" target="_blank" class="text-decoration-none">
-        <i class="fas fa-map-marker-alt me-2"></i>Dubai, UAE
-      </a>
+    <!-- Address -->
+    <p>
+      <i class="fas fa-map-marker-alt me-2"></i>
+      <a href="https://goo.gl/maps/YOUR_LOCATION_LINK" target="_blank">Dubai, UAE</a>
+    </p>
 
-      <!-- Phone Numbers -->
-      <a href="tel:+971505565926" class="text-decoration-none">
-        <i class="fas fa-phone me-2"></i>+971-505565926
-      </a>
-      <a href="tel:+919449217321" class="text-decoration-none">
-        <i class="fas fa-phone me-2"></i>+919449217321
-      </a>
+    <!-- Phone Numbers -->
+    <p>
+      <i class="fas fa-phone me-2"></i>
+      <a href="tel:+971505565926">+971-505565926</a>
+      <a href="https://wa.me/971505565926" target="_blank" class="ms-2"><i class="fab fa-whatsapp text-success"></i></a>
+    </p>
 
-      <!-- Email -->
-      <a href="mailto:mhrizwanmuhammad16@gmail.com" class="text-decoration-none">
-        <i class="fas fa-envelope me-2"></i>mhrizwanmuhammad16@gmail.com
-      </a>
+    <p>
+      <i class="fas fa-phone me-2"></i>
+      <a href="tel:+971XXXXXXXXX">+971-XXXXXXXXX</a>
+      <a href="https://wa.me/971XXXXXXXXX?text=Hey" target="_blank" class="ms-2"><i class="fab fa-whatsapp text-success"></i></a>
+    </p>
 
-      <!-- Social Links -->
-      <div class="d-flex gap-3 mt-2">
-        <a href="https://www.linkedin.com/in/m-h-rizwan-2910d2002" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-        <a href="https://www.instagram.com/m.h_rizwan/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
-      </div>
+    <!-- Email -->
+    <p>
+      <i class="fas fa-envelope me-2"></i>
+      <a href="mailto:mhrizwanmuhammad16@gmail.com">mhrizwanmuhammad16@gmail.com</a>
+    </p>
+
+    <!-- Social Links -->
+    <div class="d-flex gap-3 mt-2">
+      <a href="https://www.linkedin.com/in/m-h-rizwan-2910d2002" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+      <a href="https://www.instagram.com/m.h_rizwan/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
     </div>
   </div>
 </section>
+
 
   <hr>
 
