--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
     <p>
       <i class="fas fa-phone me-2"></i>
       <a href="tel:+971505565926">+971-505565926</a>
-      <a href="https://wa.me/971505565926" target="_blank" class="ms-2"><i class="fab fa-whatsapp text-success"></i></a>
+      <a href="https://wa.me/971505565926" target="_Hey" class="ms-2"><i class="fab fa-whatsapp text-success"></i></a>
     </p>
 
     <p>
       <i class="fas fa-phone me-2"></i>
-      <a href="tel:+971XXXXXXXXX">+971-XXXXXXXXX</a>
-      <a href="https://wa.me/971XXXXXXXXX?text=Hey" target="_blank" class="ms-2"><i class="fab fa-whatsapp text-success"></i></a>
+      <a href="tel:+919449217321">+919449217321</a>
+      <a href="https://wa.me/919449217321?text=Hey" target="_blank" class="ms-2"><i class="fab fa-whatsapp text-success"></i></a>
     </p>
 
     <!-- Email -->
