--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
     <!-- Address -->
     <p>
       <i class="fas fa-map-marker-alt me-2"></i>
-      <a href="https://goo.gl/maps/YOUR_LOCATION_LINK" target="_blank">Dubai, UAE</a>
+      <a href="https://maps.app.goo.gl/BRvEbWsqRn1p6Sn1A" target="_blank">JLT Cluster Y,Dubai, UAE</a>
     </p>
 
     <!-- Phone Numbers -->
