--- a/index.html
+++ b/index.html
@@ -62,46 +62,59 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
     
 <!-- Main Content -->
 <div class="content">
-    <!-- About Me Section -->
-<section class="resume-section" id="about">
-  <h2>About Me</h2>
-  <p>
-    Electronics and Communication Engineer specializing in Embedded Systems, IoT, Robotics, and Automation. Experienced in firmware development, wireless communication protocols, PCB design, system integration, and testing using STM32, ESP32, and Raspberry Pi. Passionate about developing advanced embedded systems for smart cities, defense, transportation, and intelligent automation.
-  </p>
-
-  <div class="mt-4">
-    <!-- Address -->
+  <!-- About Me Section -->
+  <section class="resume-section" id="about">
+    <h2>About Me</h2>
     <p>
-      <i class="fas fa-map-marker-alt me-2"></i>
-      <a href="https://maps.app.goo.gl/BRvEbWsqRn1p6Sn1A" target="_blank">JLT Cluster Y,Dubai, UAE</a>
+      Electronics and Communication Engineer specializing in Embedded Systems, IoT, Robotics, and Automation. Experienced in firmware development, wireless communication protocols, PCB design, system integration, and testing using STM32, ESP32, and Raspberry Pi. Passionate about developing advanced embedded systems for smart cities, defense, transportation, and intelligent automation.
     </p>
 
-    <!-- Phone Numbers -->
-    <p>
-      <i class="fas fa-phone me-2"></i>
-      <a href="tel:+971505565926">+971-505565926</a>
-      <a href="https://wa.me/971505565926" target="_Hey" class="ms-2"><i class="fab fa-whatsapp text-success"></i></a>
-    </p>
+    <div class="mt-4">
+      <!-- Address -->
+      <p>
+        <a href="https://maps.app.goo.gl/BRvEbWsqRn1p6Sn1A" target="_blank">
+          <i class="fas fa-map-marker-alt me-2"></i>JLT Cluster Y, Dubai, UAE
+        </a>
+      </p>
 
-    <p>
-      <i class="fas fa-phone me-2"></i>
-      <a href="tel:+919449217321">+919449217321</a>
-      <a href="https://wa.me/919449217321?text=Hey" target="_blank" class="ms-2"><i class="fab fa-whatsapp text-success"></i></a>
-    </p>
+      <!-- Phone Numbers -->
+      <p>
+        <a href="tel:+971505565926">
+          <i class="fas fa-phone me-2"></i>+971-505565926
+        </a>
+        <a href="https://wa.me/971505565926" target="_blank" class="ms-2">
+          <i class="fab fa-whatsapp text-success"></i>
+        </a>
+      </p>
 
-    <!-- Email -->
-    <p>
-      <i class="fas fa-envelope me-2"></i>
-      <a href="mailto:mhrizwanmuhammad16@gmail.com">mhrizwanmuhammad16@gmail.com</a>
-    </p>
+      <p>
+        <a href="tel:+919449217321">
+          <i class="fas fa-phone me-2"></i>+919449217321
+        </a>
+        <a href="https://wa.me/919449217321?text=Hey" target="_blank" class="ms-2">
+          <i class="fab fa-whatsapp text-success"></i>
+        </a>
+      </p>
 
-    <!-- Social Links -->
-    <div class="d-flex gap-3 mt-2">
-      <a href="https://www.linkedin.com/in/m-h-rizwan-2910d2002" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-      <a href="https://www.instagram.com/m.h_rizwan/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+      <!-- Email -->
+      <p>
+        <a href="mailto:mhrizwanmuhammad16@gmail.com">
+          <i class="fas fa-envelope me-2"></i>mhrizwanmuhammad16@gmail.com
+        </a>
+      </p>
+
+      <!-- Social Links -->
+      <div class="d-flex gap-3 mt-2">
+        <a href="https://www.linkedin.com/in/m-h-rizwan-2910d2002" target="_blank">
+          <i class="fab fa-linkedin fa-2x"></i>
+        </a>
+        <a href="https://www.instagram.com/m.h_rizwan/" target="_blank">
+          <i class="fab fa-instagram fa-2x"></i>
+        </a>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
+</div>
 
 
   <hr>
