--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
   </section>
 </div>
 
-
+<div class="container-fluid p-0"
   <hr>
 
   <!-- Professional Experience -->
