--- a/index.html
+++ b/index.html
@@ -59,13 +59,24 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
 <!-- Add in <head> if not already: -->
 <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     
-<!-- Main Content -->
-<div class="content">
-  <!-- About Me Section -->
-  <section class="resume-section" id="about">
+<!-- Updated About Me Section with New Content -->
+<section class="resume-section" id="about">
     <h1>About Me</h1>
+
     <p>
-      Electronics and Communication Engineer specializing in Embedded Systems, IoT, Robotics, and Automation. Experienced in firmware development, wireless communication protocols, PCB design, system integration, and testing using STM32, ESP32, and Raspberry Pi. Passionate about developing advanced embedded systems for smart cities, defense, transportation, and intelligent automation.
+      I am an Electronics and Communication Engineer with a strong specialization in Embedded Systems, IoT, Robotics, and Automation. My experience spans end-to-end development of intelligent electronic systems, including firmware engineering, real-time signal processing, wireless communication integration, PCB design, and system-level testing using STM32, ESP32, and Raspberry Pi platforms. I have worked extensively with protocols such as LoRa, BLE, Zigbee, Wi-Fi, MQTT, and RF communication, enabling reliable and secure IoT connectivity across diverse applications.
+    </p>
+
+    <p>
+      Throughout my academic and project journey, I have designed and built highly innovative prototypes, including an AI-based hospital surveillance robot, an EEG-controlled prosthetic arm, a smart wheelchair convertible to a stretcher, autonomous rovers, and multiple smart-city automation systems. These projects demonstrate my ability to integrate hardware, embedded software, sensor fusion, machine learning, and control algorithms into functional real-world solutions.
+    </p>
+
+    <p>
+      As the Organizer for Google Developer Group (GDG) and President of the Creators Club at my innovation hub, I have led multiple teams, organized large-scale workshops and hackathons, and mentored students in electronics, coding, robotics, and system design. I have also represented my institute in prestigious competitions, including the IIT Madras Caterpillar Autonomous Vehicle Challenge, showcasing my skills in autonomy, computer vision, obstacle detection, and real-time embedded computing.
+    </p>
+
+    <p>
+      My strengths include leadership, problem-solving, rapid learning, technical creativity, and the ability to work calmly under pressure. I am passionate about building next-generation embedded solutions for smart cities, defense systems, healthcare automation, and transportation technology. With a strong honors degree foundation, practical hands-on experience, and a commitment to innovation, I aim to contribute to cutting-edge engineering environments where technology directly impacts society and drives future advancements.
     </p>
 
     <div class="mt-4">
@@ -112,9 +123,7 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
         </a>
       </div>
     </div>
-  </section>
-</div>
-    <div class="content">
+</section>
  <hr>
   <!-- Professional Experience -->
   <section class="resume-section" id="experience">
