--- a/index.html
+++ b/index.html
@@ -124,6 +124,99 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
       </div>
     </div>
 </section>
+
+    
+ <hr>
+  <!-- Professional Experience -->
+  <section class="resume-section" id="experience">
+    <h1>Professional Summary</h1>
+    <div class="mb-4">
+      <h3>Embedded & IoT Intern</h3>
+      <p>CDAC, Apr 2025 - Jul 2025</p>
+      <p>Developed smart IoT systems integrating sensor networks, RF communication, and automation. Worked on embedded firmware, hardware-software integration, and system validation.</p>
+    </div>
+    <div class="mb-4">
+      <h3>VLSI Design Engineer</h3>
+      <p>Rooman Technologies, Sep 2024 - Feb 2025</p>
+      <p>Designed and verified RTL modules using Verilog/SystemVerilog. Performed timing analysis, synthesis, and FPGA-based prototyping for ASIC development.</p>
+    </div>
+    <div class="mb-4">
+      <h3>Embedded Systems & Robotics Intern</h3>
+      <p>Acmegrade (IIT Bombay) & ComedKares, Sep 2023 - Jan 2024</p>
+      <p>Programmed microcontrollers, integrated sensors, and built autonomous robots. Worked on wireless communication, system debugging, and real-time performance validation.</p>
+    </div>
+    <div class="mb-4">
+      <h3>Web Developer Intern</h3>
+      <p>Codelab Systems, Mangalore, May 2023 - Jun 2023</p>
+      <p>Developed dashboards for IoT device monitoring and cloud connectivity. Built responsive front-end interfaces and integrated real-time IoT APIs.</p>
+    </div>
+  </section>
+  <hr>
+
+  <!-- Education & Certifications -->
+  <section class="resume-section" id="education-certifications">
+    <h2>Education & Certifications</h2>
+    <div class="mb-3">
+      <h3>Bearys Institute of Technology, Mangalore</h3>
+      <p>B.E. – Electronics & Communication, Dec 2021 - Jun 2025</p>
+      <p>Hands-on experience in embedded systems, IoT, robotics, VLSI, and automation technologies.</p>
+    </div>
+    <ul>
+      <li>Generative AI: Career Essentials – Microsoft</li>
+      <li>VLSI Design Engineer Certification</li>
+      <li>Critical Thinking & AI Ethics Training</li>
+    </ul>
+  </section>
+  <hr>
+
+  <!-- Skills -->
+  <section class="resume-section" id="skills">
+    <h2>Skills</h2>
+    <p><strong>Embedded Systems & IoT:</strong> STM32, ESP32, Arduino, Raspberry Pi, MQTT, LoRa, ZigBee, Modbus, RF Systems</p>
+    <p><strong>Programming & Firmware:</strong> C, C++, Python, Embedded Linux, RTOS, Machine Learning Integration</p>
+    <p><strong>Robotics & Circuit Design:</strong> Motor Control, PID, PCB Design, KiCad, Proteus, Power Electronics</p>
+    <p><strong>AI & Data Processing:</strong> TensorFlow, PyTorch, OpenCV, Predictive Modelling, Signal Processing</p>
+    <p><strong>Workflow & Soft Skills:</strong> Agile Development, Team Collaboration, Project Execution, Leadership & Mentorship</p>
+  </section>
+  <hr>
+
+  <!-- Awards -->
+  <section class="resume-section" id="awards">
+    <h2>Awards & Achievements</h2>
+    <div class="row">
+      <div class="col-md-4 text-center mb-4">
+        <img src="star-performer.jpg" class="img-fluid rounded mb-2" alt="">
+        <h5>Star Performer – CDAC Bangalore</h5>
+        <p>2025</p>
+      </div>
+      <div class="col-md-4 text-center mb-4">
+        <img src="amti-prize.jpg" class="img-fluid rounded mb-2" alt="">
+        <h5>1st Prize – Paper Presentation (AMTIS)</h5>
+        <p>2024</p>
+      </div>
+      <div class="col-md-4 text-center mb-4">
+        <img src="caterpillar-challenge.jpg" class="img-fluid rounded mb-2" alt="">
+        <h5>2nd Runner-Up – Caterpillar Autonomy Challenge (IIT Madras)</h5>
+        <p>2024</p>
+      </div>
+    </div>
+  </section>
+  <hr>
+
+  <!-- Projects -->
+  <section class="resume-section" id="projects">
+    <h2>Projects</h2>
+    <p>COMING SOOON .....!.</p>
+  </section>
+</div>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
+
+
+    
  <hr>
   <!-- Professional Experience -->
   <section class="resume-section" id="experience">
