--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
 <!-- Add in <head> if not already: -->
 <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     
+    <!-- Main Content -->
+<div class="content">
+    
 <!-- Updated About Me Section with New Content -->
 <section class="resume-section" id="about">
     <h1>About Me</h1>
