--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
       <!-- Address -->
       <p>
         <a href="https://maps.app.goo.gl/BRvEbWsqRn1p6Sn1A" target="_blank">
-          <i class="fas fa-map-marker-alt me-2"></i>JLT Cluster Y, Dubai, UAE
+          <i class="fas fa-map-marker-alt me-2"></i>Dubai, UAE
         </a>
       </p>
 
