--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
 </head>
 <body>
 
+body {
+    background: url('background.gif') no-repeat center center fixed;
+    background-size: cover;
+}
+
+.content {
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 60px 40px;
+    margin-left: 300px;
+    border-radius: 10px;
+}
+
+    
 <!-- Sidebar -->
 <div class="sidebar d-flex flex-column align-items-center p-3">
   <!-- Profile Image -->
