--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
 .modal-img { width: 100%; max-width: 400px; border-radius: 5px; }
 .skill-box { margin-top: 10px; font-weight: 500; }
 body {
-        background: url('background.gif') no-repeat center center fixed;
+        background: url('Background.gif') no-repeat center center fixed;
         background-size: cover;
     }
 
