--- a/index.html
+++ b/index.html
@@ -134,10 +134,30 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
   <section class="resume-section" id="experience">
     <h1>Professional Summary</h1>
     <div class="mb-4">
-      <h3>Embedded & IoT Intern</h3>
-      <p>CDAC, Apr 2025 - Jul 2025</p>
-      <p>Developed smart IoT systems integrating sensor networks, RF communication, and automation. Worked on embedded firmware, hardware-software integration, and system validation.</p>
-    </div>
+  <h3>Embedded & IoT Intern</h3>
+  <p>Centre for Development of Advanced Computing (C-DAC), Apr 2025 - Jul 2025</p>
+  <ul style="margin-left: 20px; padding-left: 0; list-style-type: disc;">
+    <li>Worked on designing and developing smart IoT monitoring systems using environmental and industrial sensors.</li>
+    <li>Integrated RF modules and ESP32/industrial boards for long-range and reliable sensor communication.</li>
+    <li>Gained hands-on experience with MQTT, including QoS levels, retained messages, Last Will, and real-time cloud updates.</li>
+    <li>Implemented CoAP communication using libcoap for lightweight IoT data transfer in constrained networks.</li>
+    <li>Worked with industrial IoT boards, analyzing communication protocols, packet flow, and device interoperability.</li>
+    <li>Applied Python and machine learning techniques for data processing, anomaly detection, and intelligent system behavior.</li>
+    <li>Performed hardware–software integration, sensor calibration, debugging, and validation for real-time automation applications.</li>
+    <li>Tested IoT nodes for accuracy, latency, and communication reliability under different operating conditions.</li>
+    <li>Developed a complete Smart Parking System using ESP32, RF modules, and ultrasonic sensors for slot monitoring.</li>
+    <li>Built real-time parking occupancy detection with continuous cloud synchronization.</li>
+    <li>Designed a cloud-enabled web application using MQTT and REST APIs for live slot availability, advance booking, and subscription plans.</li>
+    <li>Implemented real-time vehicle entry/exit monitoring with automated slot status updates.</li>
+    <li>Built the full IoT system architecture including firmware, MQTT broker integration, backend communication, and front-end visualization.</li>
+    <li>Ensured secure and optimized communication between embedded devices and cloud servers.</li>
+    <li>Added analytics features such as occupancy trends, usage patterns, and system efficiency insights.</li>
+    <li>Performed stress testing, multi-node integration, and communication reliability analysis for smart-city scalability.</li>
+    <li>Successfully deployed the working prototype demonstrating end-to-end automated parking management.</li>
+    <li>Awarded Best Performer of the Batch for outstanding technical innovation and project execution.</li>
+  </ul>
+</div>
+
     <div class="mb-4">
       <h3>VLSI Design Engineer</h3>
       <p>Rooman Technologies, Sep 2024 - Feb 2025</p>
